--- a/4.React컴포넌트화면설계서.md
+++ b/4.React컴포넌트화면설계서.md
@@ -1,8 +1,8 @@
 # React 화면 설계서 문서 템플릿
 
 ## 문서 정보
-- **작성자**: [작성자명]
-- **작성일**: [YYYY-MM-DD]
+- **작성자**: 강소현
+- **작성일**: 2025.09.08
 - **버전**: [v1.0]
 - **검토자**: [검토자명]
 
@@ -10,37 +10,42 @@
 
 ### 레이아웃 구성
 ```
-┌─────────────────────────────────┐
-│           Header                │
-├─────────────────────────────────┤
-│ Sidebar │      Main Content     │
-│         │                       │
-│         │                       │
-│         │                       │
-├─────────┼───────────────────────┤
-│         │        Footer         │
-└─────────┴───────────────────────┘
+┌───────────────────────────────────────────┐
+│ Header(상단 메뉴: 로그인, 회원가입, 검색 등) │
+├───────────────────────────────────────────┤
+│               Main Content                │
+│   (중앙 로고 이미지, 슬로건, 검색창, 버튼)   │
+│                                           │
+│                                           │
+├───────────────────────────────────────────┤
+│              Footer ( 없음 )              │
+└───────────────────────────────────────────┘
 ```
 
 ### 주요 섹션
 | 섹션명 | 위치 | 역할 | 필수여부 |
 |--------|------|------|----------|
-| [Header] | 상단 | [역할 설명] | 필수 |
-| [Navigation] | 좌측 | [역할 설명] | 선택 |
-| [Content Area] | 중앙 | [역할 설명] | 필수 |
-| [Sidebar] | 우측 | [역할 설명] | 선택 |
-| [Footer] | 하단 | [역할 설명] | 선택 |
+| [Header] | 상단 | 로그인, 회원가입, 검색, 커뮤니티 메뉴 제공 | 필수 |
+| [Navigation] | 좌측 | 없음 | 선택 |
+| [Content Area] | 중앙 | 브랜드 로고/이미지, 슬로건, 검색 입력창, 버튼 | 필수 |
+| [Sidebar] | 우측 | 없음 | 선택 |
+| [Footer] | 하단 | 없음 | 선택 |
 
 
 ## 화면 개요
 
 ### 화면 목적
-- **주요 기능**: [이 화면에서 사용자가 수행할 수 있는 주요 작업]
-- **사용자 그룹**: [이 화면을 사용할 대상 사용자]
+사용자에게 첫인상을 주는 시작 페이지(랜딩 페이지)로, 브랜드 정체성을 보여주고 스타일 살롱 검색 기능 제공
+- **주요 기능**:
+  - 메인 이미지 및 브랜드명 표시
+  - 간단한 메시지(브랜드 소개/문구) 제공
+  - 검색창을 통해 "스타일 살롱" 찾기 기능 제공
+  - CTA 버튼(살롱 등록하기) 제공
+- **사용자 그룹**: 일반 사용자, 신규 방문자
 
 ### 화면 분류
-- **화면 타입**: [ ] 목록 화면 [ ] 상세 화면 [ ] 입력 화면 [ ] 대시보드 [ ] 기타
-- **권한 레벨**: [ ] 공개 [ ] 로그인 필요 [ ] 관리자 전용 [ ] 특정 권한 필요
+- **화면 타입**: [ ] 대시보드/랜딩 화면
+- **권한 레벨**: [ ] 공개
 
 ### 화면 캡쳐
 ```
