--- a/4.React컴포넌트화면설계서.md
+++ b/4.React컴포넌트화면설계서.md
@@ -11,7 +11,7 @@
 ### 레이아웃 구성
 ```
 ┌───────────────────────────────────────────┐
-│ Header(상단 메뉴: 로그인, 회원가입, 검색 등) │
+│ Header(상단 메뉴: 로그인, 회원가입, 검색, 커뮤니티) │
 ├───────────────────────────────────────────┤
 │               Main Content                │
 │   (중앙 로고 이미지, 슬로건, 검색창, 버튼)   │
@@ -54,5 +54,168 @@
 ![메인페이지](./images/main.png)
 ---
 
+
+## 화면 구조 설계
+
+### 레이아웃 구성
+```
+┌───────────────────────────────────────────┐
+│ Header(상단 메뉴: 로그인, 회원가입, 검색, 커뮤니티) │
+├───────────────────────────────────────────┤
+│  Sidebar  │   Main Content                │
+│  ( 없음 ) │ - 상단 로고 + 검색창           │
+│           │ - 카테고리(상의, 팬츠 등)       │
+│           │ - 추천 상품 목록 (그리드)       │
+│           │ - 하단 Footer 정보             │   
+├───────────────────────────────────────────┤
+│                   Footer                  │
+└───────────────────────────────────────────┘
+```
+
+### 주요 섹션
+| 섹션명 | 위치 | 역할 | 필수여부 |
+|--------|------|------|----------|
+| [Header] | 상단 | 로그인, 회원가입, 검색, 마이페이지, 커뮤니티 메뉴 제공 | 필수 |
+| [Navigation] | 좌측 | 메뉴 버튼 (모바일/사이드바 메뉴 확장용) | 선택 |
+| [Content Area] | 중앙 | 로고, 검색창, 카테고리 버튼(상의/팬츠/남성/여성/키즈), 추천 상품 리스트 | 필수 |
+| [Sidebar] | 우측 | 없음 | 선택 |
+| [Footer] | 하단 | 상호, 사업자등록번호, 주소, 고객센터, 이용약관 등 정보 표시 | 선택 |
+
+
+## 화면 개요
+
+### 화면 목적
+사용자가 쉽게 상품을 탐색하고 추천 상품을 확인할 수 있는 쇼핑 홈/메인 화면 제공
+- **주요 기능**:
+  - 로고 및 브랜드 아이덴티티 제공
+  - 검색창을 통한 상품 검색
+  - 카테고리 버튼으로 상품 분류 탐색 (상의, 팬츠, 남성, 여성, 키즈)
+  - 추천 상품 목록 확인 (그리드 방식)
+  - Footer에서 상호 및 고객센터 정보 제공
+- **사용자 그룹**: 일반 사용자, 쇼핑몰 방문 고객
+
+### 화면 분류
+- **화면 타입**: [ ] 목록 화면
+- **권한 레벨**: [ ] 공개
+
+### 화면 캡쳐
+```
+![메인페이지](./images/main.png)
+```
+![메인페이지](./images/main.png)
+---
+
+
+## 화면 구조 설계
+
+### 레이아웃 구성
+```
+┌───────────────────────────────────────────┐
+│ Header(상단 메뉴: 로그인, 회원가입, 검색, 커뮤니티) │
+├───────────────────────────────────────────┤
+│        Global Navigation Bar              │
+│ (카테고리: 상의, 아우터, 바지, 원피스/스커트,│
+│  ACC/BAG, 홈웨어/속옷, 키즈, 문의)          │
+├───────────────────────────────────────────┤
+│  Sidebar  │   Main Content                │
+│  ( 없음 ) │ - 상단 로고 + 검색창           │
+│           │ - 카테고리 아이콘 (상의~키즈)   │
+│           │ - 추천 상품 목록 (그리드)       │
+│           │ - 하단 Footer 정보             │   
+├───────────────────────────────────────────┤
+│                   Footer                  │
+└───────────────────────────────────────────┘
+```
+
+### 주요 섹션
+| 섹션명 | 위치 | 역할 | 필수여부 |
+|--------|------|------|----------|
+| [Header] | 상단 | 로그인, 회원가입, 검색, 마이페이지, 커뮤니티 메뉴 제공 | 필수 |
+| [Navigation] | 상단 | 글로벌 네비게이션 바(GNB) - 상품 카테고리별 메뉴 제공 | 필수 |
+| [Content Area] | 중앙 | 로고, 검색창, 카테고리 버튼(상의/팬츠/남성/여성/키즈), 추천 상품 리스트 | 필수 |
+| [Sidebar] | 우측 | 없음 | 선택 |
+| [Footer] | 하단 | 상호, 사업자등록번호, 주소, 고객센터, 이용약관 등 정보 표시 | 선택 |
+
+
+## 화면 개요
+
+### 화면 목적
+카테고리별 탐색이 강화된 상품 메인 페이지로, 사용자가 관심 있는 카테고리에서 바로 탐색할 수 있도록 지원
+- **주요 기능**:
+  - 글로벌 네비게이션 바(GNB) 제공 (카테고리별 진입 가능)
+  - 검색창을 통한 상품 검색
+  - 카테고리 아이콘 기반 빠른 탐색 (상의/팬츠/남성/여성/키즈)
+  - 추천 상품 목록 제공
+  - Footer에서 상호 및 고객센터 정보 제공
+- **사용자 그룹**: 일반 사용자, 쇼핑몰 방문 고객
+
+### 화면 분류
+- **화면 타입**: [ ] 목록 화면
+- **권한 레벨**: [ ] 공개
+
+### 화면 캡쳐
+```
+![메인페이지](./images/main.png)
+```
+![메인페이지](./images/main.png)
+---
+
+
+## 화면 구조 설계
+
+### 레이아웃 구성
+```
+┌───────────────────────────────────────────┐
+│ Header(상단 메뉴: 로그인, 회원가입, 검색, 커뮤니티) │
+├───────────────────────────────────────────┤
+│        Global Navigation Bar              │
+│ (카테고리: 상의, 아우터, 바지, 원피스/스커트,│
+│  ACC/BAG, 홈웨어/속옷, 키즈, 문의)          │
+├───────────────────────────────────────────┤
+│  Sidebar(햄버거 메뉴) │   Main Content     │
+│                     │ - 상단 로고 + 검색창 │
+│                     │ - 서브 카테고리 탭   │
+│                     │   (전체, 반소매, 긴소매,│
+│                     │    셔츠/블라우스 등) │
+│                     │ - 성별 필터 (남자/여자)│
+│                     │ - 상품 목록 (그리드)   │
+│                     │ - 상품명/가격/관심추가 │
+├─────────────────────┴─────────────────────┤
+│                   Footer                  │
+└───────────────────────────────────────────┘
+```
+
+### 주요 섹션
+| 섹션명 | 위치 | 역할 | 필수여부 |
+|--------|------|------|----------|
+| [Header] | 상단 | 로그인, 회원가입, 검색, 마이페이지, 커뮤니티 메뉴 제공 | 필수 |
+| [Navigation] | 상단 | 글로벌 네비게이션 바(GNB) - 상품 카테고리별 메뉴 제공 | 필수 |
+| [Content Area] | 중앙 | 로고, 검색창, 서브 카테고리 탭(전체, 반소매, 긴소매, 셔츠/블라우스, 니트/스웨터, 맨투맨/후드, 기타), 성별 필터(남/여), 상품 리스트(그리드) | 필수 |
+| [Sidebar] | 우측 | 없음 | 선택 |
+| [Footer] | 하단 | 상호, 사업자등록번호, 주소, 고객센터, 이용약관 등 정보 표시 | 선택 |
+
+
+## 화면 개요
+
+### 화면 목적
+사용자가 특정 카테고리(예: 상의) 내에서 하위 분류(반소매, 긴소매 등)와 성별 필터를 통해 상품을 탐색할 수 있는 카테고리 상세 목록 페이지
+- **주요 기능**:
+  - 글로벌 네비게이션 바(GNB) 제공 (카테고리별 진입 가능)
+  - 서브 카테고리 탭 이동 (예: 반소매, 긴소매, 셔츠/블라우스 등)
+  - 성별 필터링 기능 (남/여)
+  - 상품 목록 그리드 표시 (상품명, 가격, 관심추가 버튼)
+  - Footer에서 상호 및 고객센터 정보 제공
+- **사용자 그룹**: 일반 사용자, 쇼핑몰 방문 고객
+
+### 화면 분류
+- **화면 타입**: [ ] 목록 화면
+- **권한 레벨**: [ ] 공개
+
+### 화면 캡쳐
+```
+![메인페이지](./images/main.png)
+```
+![메인페이지](./images/main.png)
+---
 
 
